aarch32-tests/tests/snapshots/mps3-an536/prefetch-exception-t32-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a prefetch abort exception example
prefetch abort occurred
IFSR (Fault Status Register): Ifsr { fnv: false, ext: false, status: Ok(Debug) }
IFAR (Faulting Address Register): Ifar(0)
caught bkpt_from_t32
Doing it again
prefetch abort occurred
IFSR (Fault Status Register): Ifsr { fnv: false, ext: false, status: Ok(Debug) }
IFAR (Faulting Address Register): Ifar(0)
caught bkpt_from_t32
Skipping instruction
Recovered from fault OK!
