aarch32-tests/tests/snapshots/mps3-an536/smp-test-armv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
I am core 0 - Mpidr(80000000)
I am core 1 - Mpidr(80000001)
CAS test passed
CS Mutex test passed
