aarch32-tests/tests/snapshots/mps3-an536/svc-t32-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
x = 1, y = 2, z = 3.000
In svc_handler, with arg=0x000012
In svc_handler, with arg=0x000034
x = 1, y = 2, z = 3.000
