aarch32-tests/tests/snapshots/mps3-an536/undef-exception-a32-armv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a undef exception example
undefined abort occurred
caught udf_from_a32
Doing it again
undefined abort occurred
caught udf_from_a32
Skipping instruction
Recovered from fault OK!
